@@ -8,7 +8,6 @@ import ru.otus.hw.dao.QuestionDao;
 import ru.otus.hw.domain.Answer;
 import ru.otus.hw.domain.Question;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.Mockito.*;
@@ -29,26 +28,52 @@ class TestServiceImplTest {
     @Test
     void executeTest() {
         // Arrange
-        Question question = new Question("How should resources be loaded form jar in Java?",
-                Arrays.asList(
-                        new Answer("ClassLoader#geResourceAsStream or ClassPathResource#getInputStream", true),
-                        new Answer("ClassLoader#geResource#getFile + FileReader", false),
-                        new Answer("Wingardium Leviosa", false)
-                )
+        List<Answer> answers1 = List.of(
+                new Answer("Science doesn't know this yet", true),
+                new Answer("Certainly. The red UFO is from Mars. And green is from Venus", false),
+                new Answer("Absolutely not", false)
         );
-        List<Question> questions = List.of(question);
+        List<Answer> answers2 = List.of(
+                new Answer("ClassLoader#getResourceAsStream or ClassPathResource#getInputStream", true),
+                new Answer("ClassLoader#getResource#getFile + FileReader", false),
+                new Answer("Wingardium Leviosa", false)
+        );
+        List<Question> questions = List.of(
+                new Question("Is there life on Mars?", answers1),
+                new Question("How should resources be loaded form jar in Java?", answers2)
+        );
 
         when(questionDao.findAll()).thenReturn(questions);
+        when(ioService.readString("")).thenReturn("1").thenReturn("1");
+
+        //Act
+        testService.executeTest();
+
+        //Assert
+        verify(ioService).printFormattedLine("Please answer the questions below:");
+    }
+
+    @Test
+    void printQuestionsAndAnswers() {
+        // Arrange
+        List<Answer> answers = List.of(
+                new Answer("Correct answer", true),
+                new Answer("Wrong answer", false),
+                new Answer("Another wrong answer", false)
+        );
+        Question question = new Question("Sample question?", answers);
+
+        when(questionDao.findAll()).thenReturn(List.of(question));
+        when(ioService.readString("")).thenReturn("1");
 
         // Act
         testService.executeTest();
 
         // Assert
-        verify(ioService).printLine("");
-        verify(ioService).printFormattedLine("Please answer the questions below%n");
-        verify(ioService).printFormattedLine("How should resources be loaded form jar in Java?");
-        verify(ioService).printFormattedLine("ClassLoader#geResourceAsStream or ClassPathResource#getInputStream");
-        verify(ioService).printFormattedLine("ClassLoader#geResource#getFile + FileReader");
-        verify(ioService).printFormattedLine("Wingardium Leviosa");
+        verify(ioService).printFormattedLine("Sample question?");
+        verify(ioService).printFormattedLine("1. Correct answer");
+        verify(ioService).printFormattedLine("2. Wrong answer");
+        verify(ioService).printFormattedLine("3. Another wrong answer");
+        verify(ioService).printLine("Correct! The answer is: Correct answer");
     }
 }
